# devops-practices

./: .gitignore  .gitlab-ci.yml  .mcp.json  CHANGELOG.md  CONTRIBUTING.md  JOURNEY.md  LICENSE  MIGRATION-GUIDE.md  PORTABILITY.md  PRACTICE-INDEX.md  QUICK-START.md  README.md  REORGANIZATION-PROPOSAL.md  SETUP.md  claude-config-example.json  health-check.sh  mcp-server-sdk.py  mcp-server.py  pyproject.toml  requirements.txt  server.json
.claude/: instructions.md
.github/workflows/: ci.yml
config/: README.md
practices/: 02-01-git-practices.md  03-03-standard-workflow.md  air-gapped-workflow.md  configuration-management.md  documentation-standards.md  efficiency-guidelines.md  git-practices.md  issue-tracking.md  readme-maintenance.md  runbook-documentation.md  session-continuity.md  standard-workflow.md  task-tracking.md
src/devops_practices_mcp/: __init__.py  __main__.py
src/devops_practices_mcp/practices/: 01-03-efficiency-guidelines.md  04-03-runbook-documentation.md  configuration-management.md  documentation-standards.md  task-tracking.md
src/devops_practices_mcp/templates/: CLAUDE-template.md  CURRENT-STATE-template.md  ISSUES.md  TRACKER-template.md
templates/: CLAUDE-template.md  ISSUE-TEMPLATE.md  RUNBOOK-template.md  TRACKER-template.md  issues-README.md
tools/: issue-manager.sh
