[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devops-practices-mcp"
version = "1.4.0"
description = "AI-powered DevOps knowledge base with practices, templates, and automation tools"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Uttam Jaiswal", email = "uttam.jaiswal@example.com"}
]
keywords = [
    "mcp",
    "devops",
    "automation",
    "best-practices",
    "infrastructure",
    "configuration-management",
    "templates",
    "knowledge-base",
    "claude",
    "ai"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Systems Administration",
]

[project.urls]
Homepage = "https://github.com/ai-4-devops/devops-practices"
Documentation = "https://github.com/ai-4-devops/devops-practices/blob/main/README.md"
Repository = "https://github.com/ai-4-devops/devops-practices"
Issues = "https://github.com/ai-4-devops/devops-practices/issues"

[project.scripts]
devops-practices-mcp = "devops_practices_mcp:main"

[tool.hatch.build.targets.wheel]
packages = ["src/devops_practices_mcp"]

[tool.hatch.build]
include = [
    "src/devops_practices_mcp/**/*.py",
    "src/devops_practices_mcp/practices/**/*.md",
    "src/devops_practices_mcp/templates/**/*.md",
]
